[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "abgleich"
description = "zfs sync tool"
authors = [{name = "Sebastian M. Ernst", email = "ernst@pleiszenburg.de"}]
maintainers = [{name = "Sebastian M. Ernst", email = "ernst@pleiszenburg.de"}]
keywords = ["zfs", "ssh"]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.6"
dependencies = [
    "click",
    "tabulate",
    "pyyaml",
    "typeguard",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: X11 Applications",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: BSD",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
    "Topic :: System",
    "Topic :: System :: Archiving",
    "Topic :: System :: Archiving :: Backup",
    "Topic :: System :: Archiving :: Mirroring",
    "Topic :: System :: Filesystems",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
dynamic = ["version"]

[project.scripts]
abgleich = "abgleich.cli:cli"

[project.optional-dependencies]
dev = [
    "black",
    "coverage[toml]",
    "deepdiff6",
    "flit",
    "myst-parser",
    "pytest",
    "pytest-cov",
    "python-lsp-server[all]",
    "Sphinx",
    "sphinx-click",
    "sphinx_rtd_theme",
    "sphinx-autodoc-typehints",
    "typeguard",
    "twine",
]
gui = [
    "pyqt5",
]

[project.urls]
Home = "https://github.com/pleiszenburg/zugbruecke"
Documentation = "https://zugbruecke.readthedocs.io/en/latest/"
Source = "https://github.com/pleiszenburg/zugbruecke"

[tool.black]
target-version = ['py36']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | env([0-9]+)
)/
'''

[tool.coverage.paths]
source = [
    "src/",
]

[tool.coverage.run]
branch = true
parallel = true
relative_files = true
source_pkgs = ["abgleich"]

[tool.pytest.ini_options]
testpaths = ["tests"]
