[package]
name = "abgleich-cli"
version = "0.2.0-alpha4"
edition = "2024"
authors = ["Sebastian M. Ernst <ernst@pleiszenburg.de>"]
description = "zfs sync tool, cli"
license = "MIT OR Apache-2.0"
publish = true
repository = "https://github.com/pleiszenburg/abgleich"
homepage = "https://github.com/pleiszenburg/abgleich"
readme = "README.md"

[[bin]]
name = "abgleich"
path = "src/main.rs"

[dependencies]
abgleich-lib = { version = "0.2.0-alpha2", path = "../abgleich-lib/", features = ["cli"] }

[features]
default = []
