[package]
name = "abgleich-lib"
version = "0.2.0-alpha3"
edition = "2024"
authors = ["Sebastian M. Ernst <ernst@pleiszenburg.de>"]
description = "zfs sync tool, core library"
license = "MIT OR Apache-2.0"
publish = true
repository = "https://github.com/pleiszenburg/abgleich"
homepage = "https://github.com/pleiszenburg/abgleich"
readme = "README.md"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.19", features = ["derive"], optional = true }
colored = "2.1.0"
console = "0.15.8"
indexmap = { version = "2.5.0", features = ["serde"] }
inquire = { version = "0.7.5", default-features = false, features = ["console"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.142"
serde_yaml_ng = "0.10.0"
shlex = "1.3.0"
thiserror = "2.0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"], optional = true }

[features]
cli = ["dep:clap", "dep:tracing-subscriber"]
